--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -45,7 +45,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -63,10 +63,10 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    
+
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -87,7 +87,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -108,7 +108,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -129,7 +129,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -150,7 +150,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -187,7 +187,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -208,7 +208,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -229,7 +229,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">pmX Projects and Support</span>
@@ -250,7 +250,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">pmX Projects and Support</span>
@@ -271,7 +271,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -308,7 +308,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
@@ -329,7 +329,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
@@ -350,7 +350,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
@@ -371,7 +371,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
@@ -392,7 +392,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
@@ -413,7 +413,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
