--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -171,31 +171,31 @@
 
                         <div class="pmx-field">
                           <div class="pmx-field__inner">
-                            <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiselect">
-                              <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+                            <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
                                 </div>
                               </div>
                               <span class="pmx-selector__itemSeperator"></span>
-                              <div class="pmx-selector__item  JS_selectorItem">
+                              <div class="pmx-selector__item JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
                                 </div>
                               </div>
                               <span class="pmx-selector__itemSeperator"></span>
-                              <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</span>
                                 </div>
                               </div>
                               <span class="pmx-selector__itemSeperator"></span>
-                              <div class="pmx-selector__item  JS_selectorItem">
+                              <div class="pmx-selector__item JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
                                 </div>
                               </div>
@@ -223,10 +223,10 @@
 
                         <div class="pmx-field">
                           <div class="pmx-field__inner">
-                            <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiselect">
+                            <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
                               <div class="pmx-selector__item  pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--label">design</span>
                                   <span class="pmx-selector__blockSeperator"></span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
@@ -235,7 +235,7 @@
                               <span class="pmx-selector__itemSeperator"></span>
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: orange; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: orange;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--label">comp</span>
                                   <span class="pmx-selector__blockSeperator"></span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">IT</span>
@@ -244,7 +244,7 @@
                               <span class="pmx-selector__itemSeperator"></span>
                               <div class="pmx-selector__item JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: blue; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: blue;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--label">dev</span>
                                   <span class="pmx-selector__blockSeperator"></span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Back-end</span>
@@ -253,7 +253,7 @@
                               <span class="pmx-selector__itemSeperator"></span>
                               <div class="pmx-selector__item JS_selectorItem">
                                 <div class="pmx-selector__block">
-                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16; color: #FFF;">ग़</span>
+                                  <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--label">status</span>
                                   <span class="pmx-selector__blockSeperator"></span>
                                   <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</span>
