--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -33,9 +33,9 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
-                          <div class="pmx-selector__block ">
+                          <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
                             <span class="pmx-selector__blockSeperator"></span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
@@ -55,9 +55,9 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
-                          <div class="pmx-selector__block ">
+                          <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
                             <span class="pmx-selector__blockSeperator"></span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Enhance logon formula for listly</span>
@@ -77,9 +77,9 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
-                          <div class="pmx-selector__block ">
+                          <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
                             <span class="pmx-selector__blockSeperator"></span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
@@ -99,9 +99,9 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
-                          <div class="pmx-selector__block ">
+                          <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
                             <span class="pmx-selector__blockSeperator"></span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Critical</span>
