update line height

--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -9,7 +9,7 @@
 }
 @font-face {
   font-family: 'tenforce';
-  src: url('../assets/fonts/tenforce.ttf') format("truetype");
+  src: url('../assets/fonts/tenforce.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
