--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -127,9 +127,19 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Include">Include</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
@@ -152,16 +162,26 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Include">Include</i>
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
-                    </div>
-                  </li>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+                  </div>
+                </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     Marketing
@@ -177,16 +197,26 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Exclude">Exclude</i>
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
-                    </div>
-                  </li>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                  </div>
+                </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     front-end
@@ -202,16 +232,26 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.05;" data-flex="0.05">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" data-filter="Exclude">Exclude</i>
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
-                    </div>
-                  </li>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+                  </div>
+                </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     back-end
