--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -27,12 +27,12 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    dev-team
+                    front-end
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -51,7 +51,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -75,12 +75,12 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    282
+                    Design
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -144,7 +144,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -179,7 +179,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #00bfff;" data-color="#00bfff">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -214,7 +214,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -247,9 +247,24 @@
                     </div>
                   </div>
                 </li>
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_Color" style="color: #e30022;" data-color="#e30022">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
