--- a/_includes/blocks/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/ms-tags-colors-color-sublist.html
@@ -4,7 +4,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #dcdcdc;" data-color="#dcdcdc">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #dcdcdc;" data-color="#dcdcdc">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -16,7 +16,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #00bfff;" data-color="#00bfff">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -28,7 +28,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -40,7 +40,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -52,7 +52,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #b8860b;" data-color="#b8860b">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #b8860b;" data-color="#b8860b">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -64,7 +64,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -76,7 +76,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #343434;" data-color="#343434">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #343434;" data-color="#343434">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
