--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -51,7 +51,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -74,7 +74,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -97,7 +97,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -151,7 +151,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -170,7 +170,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #00bfff;" data-color="#00bfff">ग़</i>
                     </div>
                   </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -189,7 +189,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
                     </div>
                   </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -208,7 +208,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                   <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
                     </div>
                   </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
