--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -27,6 +27,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
   <!-- selector -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
   <!-- new multiselect -->
@@ -63,6 +64,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
     <!-- filters -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 {% endif %}
 
 {% if page.title == 'Itembox' %}
@@ -79,6 +81,7 @@
 
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 {% endif %}
 
 {% if page.title == 'Components' or page.title == 'Filter' %}
@@ -117,6 +120,7 @@
 
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 {% endif %}
 
 {% if page.title == 'Tag-picker' %}
@@ -133,6 +137,7 @@
 
   <!-- filters -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 
   <!-- colorpicker -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
