Color: new prefix, ,JS works with both versions

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -25,9 +25,19 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -49,9 +59,19 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -73,9 +93,19 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -142,9 +172,19 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -177,9 +217,19 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -212,9 +262,19 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                    <div class="pmx-field">
+                      <div class="pmx-field__inner">
+                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector__item">
+                            <div class="pmx-selector__block">
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -254,17 +314,12 @@
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_Color" style="color: #e30022;" data-color="#e30022">ग़</span>
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #e30022;" data-color="#e30022">ग़</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
