--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -24,107 +24,155 @@
         <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
           <div class="itemBoxTable">
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
-              <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <div class="pmx-field">
-                      <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <ul class="itemBoxTable__bodyRow ">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    front-end
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--selectedText">
+                    <i>Include</i>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
                   </div>
                 </li>
               </ul>
-              {% include blocks/ms-tags-colors-color-sublist.html %}
 
-              <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <div class="pmx-field">
-                      <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+              <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
+                <div class="itemBoxTable">
+                  <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                <div class="pmx-selector__item">
+                                  <div class="pmx-selector__block">
+                                    <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
+                                  </div>
+                                </div>
+                              </div>
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                          Design
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-tags-colors-color-sublist.html %}
                   </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    back-end
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
-                  </div>
-                </li>
-              </ul>
-              {% include blocks/ms-tags-colors-color-sublist.html %}
+                </div>
+              </div>
 
-              <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                    <div class="pmx-field">
-                      <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <ul class="itemBoxTable__bodyRow ">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                    Design
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--selectedText">
+                    <i>Exclude</i>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
-                  </div>
-                </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
                   </div>
                 </li>
               </ul>
-              {% include blocks/ms-tags-colors-color-sublist.html %}
+
+              <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
+                <div class="itemBoxTable">
+                  <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                <div class="pmx-selector__item">
+                                  <div class="pmx-selector__block">
+                                    <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                          front-end
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-tags-colors-color-sublist.html %}
+
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                <div class="pmx-selector__item">
+                                  <div class="pmx-selector__block">
+                                    <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                          back-end
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-tags-colors-color-sublist.html %}
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
